--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,5 +83,6 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 }
